# iso-20022-sdk

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: macro_test.rs
src/: external_codes.rs  lib.rs  message.rs  utils.rs
src/crypto/: ecdsa.rs  mod.rs
src/documents/: acmt.rs  admi.rs  auth.rs  caaa.rs  caad.rs  caam.rs  cafc.rs  cafm.rs  cafr.rs  cain.rs  camt.rs  canm.rs  casp.rs  casr.rs  catm.rs  catp.rs  colr.rs  fxtr.rs  mod.rs  pacs.rs  pain.rs  reda.rs  remt.rs  secl.rs  seev.rs  semt.rs  sese.rs  setr.rs  tests.rs  tsin.rs  tsmt.rs  tsrv.rs
src/models/: mod.rs
src/models/dsig/: dsig.rs  ecdsa.rs  mod.rs  xpath.rs
src/models/head/: head_001_001_01.rs  head_001_001_02.rs  mod.rs  tests.rs
src/models/nvlp/: mod.rs  nvlp_001_001_01.rs
src/models/pacs/: mod.rs  pacs_002_001_12.rs  pacs_003_001_09.rs  pacs_004_001_11.rs  pacs_007_001_11.rs  pacs_008_001_10.rs  pacs_009_001_10.rs  pacs_010_001_05.rs  pacs_028_001_05.rs  tests.rs
src/primitive/: mod.rs
src/primitive/common/: mod.rs  xmlns.rs
src/primitive/common/complex_type/: account_identification4_choice.rs  account_scheme_name1_choice.rs  active_currency_and_amount.rs  active_or_historic_currency_and_amount.rs  address_type3_choice.rs  amendment_information_details14.rs  amount_type4_choice.rs  authorisation1_choice.rs  branch_and_financial_institution_identification6.rs  branch_data3.rs  cash_account40.rs  cash_account_type2_choice.rs  category_purpose1_choice.rs  charges7.rs  clearing_system_identification2_choice.rs  clearing_system_identification3_choice.rs  clearing_system_member_identification2.rs  contact4.rs  credit_transfer_mandate_data1.rs  credit_transfer_transaction50.rs  credit_transfer_transaction52.rs  credit_transfer_transaction53.rs  credit_transfer_transaction56.rs  creditor_reference_information2.rs  creditor_reference_type1_choice.rs  creditor_reference_type2.rs  date_and_date_time2_choice.rs  date_and_place_of_birth1.rs  date_period2.rs  direct_debit_transaction11.rs  direct_debit_transaction_information27.rs  direct_debit_transaction_information29.rs  discount_amount_and_type1.rs  discount_amount_type1_choice.rs  document_adjustment1.rs  document_line_identification1.rs  document_line_information1.rs  document_line_type1.rs  document_line_type1_choice.rs  equivalent_amount2.rs  (+104 more)
src/primitive/common/simple_type/: active_currency_and_amount_simple_type.rs  active_currency_code.rs  active_or_historic_currency_and_amount_simple_type.rs  active_or_historic_currency_code.rs  address_type2_code.rs  any_bic_dec2014_identifier.rs  authorisation1_code.rs  base_one_rate.rs  batch_booking_indicator.rs  bicfi_dec2014_identifier.rs  charge_bearer_type1_code.rs  clearing_channel2_code.rs  country_code.rs  credit_debit_code.rs  (+68 more)
src/primitive/head/: mod.rs
test/resources/head/: head.001.001.01-sgntr-ecdsa.xml  head.001.001.02.xml
(+47 files in other folders)
