[package]
name = "iso-20022-sdk"
version = "0.1.10-dev.2"
authors = ["ProxymaX Development Team", "Eleazar Garrido <rust.lang.latam@gmail.com>"]
repository = "https://gitlab.com/proximax-latam/ncore"
homepage = "https://www.proximax.io"
keywords = ["swift", "iso-20022"]
categories = ["finance", "iso-20022"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.74.1"
publish = false

[lib]
name = "iso_20022_sdk"

[features]
default = ["msg"]
msg = ["nvlp", "head", "crypto"]
## Cryptographic Signatures
crypto = ["dsig", "signature", "const-oid", "ecdsa"]
ecdsa = ["p256", "elliptic-curve"]
dsig = []
pacs = []
head = []
nvlp = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# This list is ordered alphabetically.
#
[dependencies]
anyhow = "1.0.1"
thiserror = "1"
quick-xml = { version = "0.31", features = ["serialize", "serde-types"] }
sxd-document = "0.3"
sxd-xpath = "0.4.2"
chrono = { version = "0.4.31", features = ["serde"] }
derive_builder = "0.12.0"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

validator = { version = "0.16", features = ["derive"]  }
xml-rs = "0.8.19"
regex = "1.10.2"
tracing = "0.1"
rust_decimal = "1.33.1"
signature = { version = "2.1.0", optional = true }
const-oid = { version = "0.9.2", optional = true, features = [ "db" ]}
uuid = { version = "1.3.3", features = ["v4", "serde"]}
elliptic-curve = { version = "0.13.4", optional = true, features = ["sec1"] }
p256 = { version = "0.13.1", optional = true, features = ["arithmetic"] }
hex = { version = "0.4.3", features = ["serde"] }
sha2 = "0.10.6"
strum = "0.25"
strum_macros = "0.25"
enum-as-inner = "0.6.0"

[profile.dev]
debug = "limited"
opt-level = 2
panic = "abort"
[profile.dev.package."*"]
opt-level = 3

# The `test` profile mimics the `dev` profile to avoid recompilations.
[profile.test]
opt-level = 2

[profile.test.package."*"]
opt-level = 3

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

iso-20022-sdk = { path = ".", features = ["pacs"] }

